# NumCPP

./: .gitignore  CMakeLists.txt  LICENSE
.github/workflows/: cmake.yml
src/: CMakeLists.txt  matrix.h  numcpp.cpp  numcpp.h  parallel.h
test/: CMakeLists.txt  MatrixOpsTest.cpp  MatrixStatusTest.cpp  MatrixTest.cpp  main.cpp
